--- a/LHDNormalizer/pom.xml
+++ b/LHDNormalizer/pom.xml
@@ -8,11 +8,19 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>cz.vse.lhd</groupId>
-    <artifactId>LHDOntologyCleanup</artifactId>
+    <artifactId>LHDNormalizer</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>LHDOntologyCleanup</name>
+    <name>LHDNormalizer</name>
     <url>http://maven.apache.org</url>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-arq</artifactId>
+            <version>2.9.4</version>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>Core</artifactId>
@@ -28,10 +36,9 @@
                     <launchers>
                         <launcher>
                             <id>runner</id>
-                            <mainClass>cz.vse.lhd.lhdontologycleanup.LHDOntologyCleanup</mainClass>
+                            <mainClass>cz.vse.lhd.lhdnormalizer.LHDNormalizer</mainClass>
                             <jvmArgs>
                                 <jvmArg>-Dfile.encoding=UTF-8</jvmArg>
-                                <jvmArg>-Xmx4g</jvmArg>
                             </jvmArgs>
                         </launcher>
                     </launchers>
