--- a/LHDTypeInferrer/pom.xml
+++ b/LHDTypeInferrer/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>cz.vse.lhd</groupId>
-    <artifactId>LHDOntologyCleanup</artifactId>
+    <artifactId>LHDTypeInferrer</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>LHDOntologyCleanup</name>
+    <name>LHDTypeInferrer</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
@@ -18,7 +18,20 @@
             <artifactId>Core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-arq</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -28,7 +41,7 @@
                     <launchers>
                         <launcher>
                             <id>runner</id>
-                            <mainClass>cz.vse.lhd.lhdontologycleanup.LHDOntologyCleanup</mainClass>
+                            <mainClass>cz.vse.lhd.lhdtypeinferrer.TypeInferrerInitializer</mainClass>
                             <jvmArgs>
                                 <jvmArg>-Dfile.encoding=UTF-8</jvmArg>
                                 <jvmArg>-Xmx4g</jvmArg>
