--- a/HypernymExtractor/module.properties
+++ b/HypernymExtractor/module.properties
@@ -1,11 +1,8 @@
 global.properties.file=../global.properties
 index.dir=../data/index
-dataset.short_abstracts.path=../data/datasets/short_abstracts_en.nt
-dataset.instance_types.path=../data/datasets/instance_types_en.nt
-dataset.labels.path=../data/datasets/labels_en.nt
 gate.dir=../utils/gate-7.0-build4195
 gate.plugin.lhd.dir=../HypernymExtractor/target/gateplugin
-gate.jape.grammar=../data/grammar/en_hearst.jape
-wiki.api=http://ner.vse.cz/wiki/
-memcached.address=192.168.116.129
+gate.jape.grammar=../data/grammar/de_hearst.jape
+wiki.api=http://de.dbpedia.org/wikipedia/
+memcached.address=192.168.116.130
 memcached.port=11211
