--- a/global.properties
+++ b/global.properties
@@ -1,5 +1,4 @@
 output.dir=../data/output
-logging.dir=../data/logs
-logging.enabled=false
+datasets.dir=../data/datasets
 lang=de
 dbpedia.version=2014
