--- a/LHDOntologyCleanup/module.properties
+++ b/LHDOntologyCleanup/module.properties
@@ -1,3 +1,3 @@
 global.properties.file=../global.properties
-manualmapping.overridetypes.path=../data/datasets/override-types_en
-manualmapping.excludetypes.path=../data/datasets/exclude-types
+#manualmapping.overridetypes.path=../data/datasets/override-types_en
+#manualmapping.excludetypes.path=../data/datasets/exclude-types
