--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>Core</module>
         <module>LHDTypeInferrer</module>
         <module>LHDNormalizer</module>
-    <module>MapReduce</module>
+        <module>MapReduce</module>
         <module>Downloader</module>
     </modules>
     <dependencies>
@@ -25,6 +25,16 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.kxbmap</groupId>
+            <artifactId>configs_2.10</artifactId>
+            <version>0.2.3</version>
         </dependency>
     </dependencies>
     <build>
