--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>commons-compress</artifactId>
             <version>1.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-arq</artifactId>
+            <version>2.9.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
