--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -7,7 +7,6 @@
         <artifactId>LHD2</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>cz.vse.lhd</groupId>
     <artifactId>Core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Core</name>
@@ -32,6 +31,21 @@
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-arq</artifactId>
             <version>2.13.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
         </dependency>
     </dependencies>
     <build>
