Parallel extraction in HypernymExtractor

--- a/application.de.conf
+++ b/application.de.conf
@@ -4,17 +4,17 @@ LHD {
     lang = "de"
     dbpedia.version = "2014"
     HypernymExtractor {
-        index.dir = "../data/index"
-        wiki.api = "http://de.dbpedia.org/wikipedia/"
+        wiki-api = "http://de.dbpedia.org/wikipedia/"
         gate {
             dir = "../utils/gate-7.0-build4195"
-            plugin.lhd.dir = "../HypernymExtractor/target/gateplugin"
-            jape.grammar = "../data/grammar/de_hearst.jape"
+            plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
+            jape-grammar = "../data/grammar/de_hearst.jape"
         }
         memcached {
             address = "127.0.0.1"
             port = 11211
         }
+        corpus-size-per-thread = 10000
     }
     OntologyCleanup {
         manualmapping {
