--- a/Core/src/main/resources/simplelogger.properties
+++ b/Core/src/main/resources/simplelogger.properties
@@ -1,3 +1,6 @@
 org.slf4j.simpleLogger.defaultLogLevel=debug
 org.slf4j.simpleLogger.showDateTime=true
 org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss:SSS Z
+
+org.slf4j.simpleLogger.log.cz.vse.lhd.hypernymextractor.builder.HypernymExtractor=info
+org.slf4j.simpleLogger.log.cz.vse.lhd.hypernymextractor.builder.DBpediaLinker=info
