--- a/application.en.conf
+++ b/application.en.conf
@@ -4,17 +4,15 @@ LHD {
     lang = "en"
     dbpedia.version = "2014"
     HypernymExtractor {
-        index.dir = "../data/index"
-        wiki.api = "http://en.wikipedia.org/w/"
+        index-dir = "../data/index"
+        wiki-api = "http://en.wikipedia.org/w/"
         gate {
             dir = "../utils/gate-7.0-build4195"
-            plugin.lhd.dir = "../HypernymExtractor/target/gateplugin"
-            jape.grammar = "../data/grammar/en_hearst.jape"
+            plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
+            jape-grammar = "../data/grammar/en_hearst.jape"
         }
-        memcached {
-            address = "127.0.0.1"
-            port = 11211
-        }
+        corpus-size-per-thread = 20000
+        maven-cmd = "mvn"
     }
     OntologyCleanup {
         manualmapping {
