Parallelism and logging enhancements

--- a/Core/src/main/resources/simplelogger.properties
+++ b/Core/src/main/resources/simplelogger.properties
@@ -4,3 +4,12 @@ org.slf4j.simpleLogger.dateTimeFormat=yyyy-MM-dd HH:mm:ss:SSS Z
 
 org.slf4j.simpleLogger.log.cz.vse.lhd.hypernymextractor.builder.HypernymExtractor=info
 org.slf4j.simpleLogger.log.cz.vse.lhd.hypernymextractor.builder.DBpediaLinker=info
+
+org.slf4j.simpleLogger.log.gate.creole.SerialController=info
+org.slf4j.simpleLogger.log.gate.util.profile.Profiler=info
+org.slf4j.simpleLogger.log.gate.jape.SinglePhaseTransducer=info
+org.slf4j.simpleLogger.log.gate.Gate=warn
+org.slf4j.simpleLogger.log.gate.creole.CreoleRegisterImpl=warn
+org.slf4j.simpleLogger.log.gate.util.GateClassLoader=error
+
+org.slf4j.simpleLogger.log.org.apache.jena.riot.system.stream.JenaIOEnvironment=info
