--- a/application.en.conf
+++ b/application.en.conf
@@ -7,12 +7,13 @@ LHD {
         index-dir = "../data/index"
         wiki-api = "http://en.wikipedia.org/w/"
         gate {
-            dir = "../utils/gate-7.0-build4195"
+            dir = "../utils/gate-8.0-build4825"
             plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
             jape-grammar = "../data/grammar/en_hearst.jape"
         }
+        parallelism-level = 2
         corpus-size-per-thread = 20000
-        maven-cmd = "mvn"
+        maven-cmd = """"C:\Program Files (x86)\JetBrains\IntelliJ IDEA 14.1.1\plugins\maven\lib\maven3\bin\mvn.bat""""
     }
     OntologyCleanup {
         manualmapping {
