--- a/HypernymExtractor/pom.xml
+++ b/HypernymExtractor/pom.xml
@@ -15,13 +15,22 @@
         <dependency>  
             <groupId>uk.ac.gate</groupId>  
             <artifactId>gate-core</artifactId>  
-            <version>7.1</version>
+            <version>8.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.lucene</groupId>
                     <artifactId>lucene-core</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>log4j-over-slf4j</artifactId>
+            <version>1.7.12</version>
         </dependency>
         <dependency>
             <groupId>net.spy</groupId>
@@ -40,6 +49,9 @@
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <configuration>
+                    <args>
+                        <arg>-Xmax-classfile-name:75</arg>
+                    </args>
                     <launchers>
                         <launcher>
                             <id>runner</id>
