OntologyCleanup - some output classes implemented

--- a/application.en.conf
+++ b/application.en.conf
@@ -16,6 +16,7 @@ LHD {
         maven-cmd = """"C:\Program Files (x86)\JetBrains\IntelliJ IDEA 14.1.1\plugins\maven\lib\maven3\bin\mvn.bat""""
     }
     OntologyCleanup {
+        index-dir = "../data/index"
         manualmapping {
             overridetypes.path = "../data/datasets/override-types_en"
             excludetypes.path = "../data/datasets/exclude-types"
