OntologyCleanup pipeline added and unused classes deleted

--- a/application.en.conf
+++ b/application.en.conf
@@ -18,8 +18,8 @@ LHD {
     OntologyCleanup {
         index-dir = "../data/index"
         manualmapping {
-            overridetypes.path = "../data/datasets/override-types_en"
-            excludetypes.path = "../data/datasets/exclude-types"
+            overridetypes-path = "../data/datasets/override-types_en"
+            excludetypes-path = "../data/datasets/exclude-types"
         }
     }
     TypeInferrer {
