Config de updated

--- a/application.de.conf
+++ b/application.de.conf
@@ -4,9 +4,10 @@ LHD {
     lang = "de"
     dbpedia.version = "2014"
     HypernymExtractor {
+        index-dir = "../data/index"
         wiki-api = "http://de.dbpedia.org/wikipedia/"
         gate {
-            dir = "../utils/gate-7.0-build4195"
+            dir = "../utils/gate-8.0-build4825"
             plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
             jape-grammar = "../data/grammar/de_hearst.jape"
         }
@@ -17,9 +18,9 @@ LHD {
         corpus-size-per-thread = 10000
     }
     OntologyCleanup {
+        index-dir = "../data/index"
         manualmapping {
-            #overridetypes.path = "../data/datasets/override-types_en"
-            #excludetypes.path = "../data/datasets/exclude-types"
+            excludetypes-path = "../data/datasets/exclude-types"
         }
     }
     TypeInferrer {
