--- a/application.en.conf
+++ b/application.en.conf
@@ -23,7 +23,7 @@ LHD {
         }
     }
     TypeInferrer {
-        compressTemporaryFiles = true
+        index-dir = "../data/index"
     }
 }
 
