--- a/application.en.conf
+++ b/application.en.conf
@@ -11,6 +11,10 @@ LHD {
             plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
             jape-grammar = "../data/grammar/en_hearst.jape"
         }
+        memcached {
+            address = "127.0.0.1"
+            port = 11211
+        }
         parallelism-level = 2
         corpus-size-per-thread = 20000
         maven-cmd = """"C:\Program Files (x86)\JetBrains\IntelliJ IDEA 14.1.1\plugins\maven\lib\maven3\bin\mvn.bat""""
