--- a/application.nl.conf
+++ b/application.nl.conf
@@ -4,26 +4,28 @@ LHD {
     lang = "nl"
     dbpedia.version = "2014"
     HypernymExtractor {
-        index.dir = "../data/index"
-        wiki.api = "http://nl.wikipedia.org/w/"
+        index-dir = "../data/index"
+        wiki-api = "http://nl.wikipedia.org/w/"
         gate {
-            dir = "../utils/gate-7.0-build4195"
-            plugin.lhd.dir = "../HypernymExtractor/target/gateplugin"
-            jape.grammar = "../data/grammar/nl_hearst.jape"
+            dir = "../utils/gate-8.0-build4825"
+            plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
+            jape-grammar = "../data/grammar/nl_hearst.jape"
         }
         memcached {
             address = "127.0.0.1"
             port = 11211
         }
+        corpus-size-per-thread = 10000
     }
     OntologyCleanup {
+        index-dir = "../data/index"
         manualmapping {
-            #overridetypes.path = "../data/datasets/override-types_en"
-            #excludetypes.path = "../data/datasets/exclude-types"
+            overridetypes-path = "../data/datasets/override-types_en"
+            excludetypes-path = "../data/datasets/exclude-types"
         }
     }
     TypeInferrer {
-        compressTemporaryFiles = true
+        index-dir = "../data/index"
     }
 }
 
