--- a/application.de.conf
+++ b/application.de.conf
@@ -5,7 +5,7 @@ LHD {
     dbpedia.version = "2014"
     HypernymExtractor {
         index-dir = "../data/index"
-        wiki-api = "http://de.dbpedia.org/wikipedia/"
+        wiki-api = "http://de.wikipedia.org/w/"
         gate {
             dir = "../utils/gate-8.0-build4825"
             plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
@@ -20,11 +20,12 @@ LHD {
     OntologyCleanup {
         index-dir = "../data/index"
         manualmapping {
+            overridetypes-path = "../data/datasets/override-types_en"
             excludetypes-path = "../data/datasets/exclude-types"
         }
     }
     TypeInferrer {
-        compressTemporaryFiles = true
+        index-dir = "../data/index"
     }
 }
 
