--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
     <name>LHD2</name>
     <modules>
         <module>HypernymExtractor</module>
-        <module>LHDOntologyCleanup</module>
+        <module>OntologyCleanup</module>
         <module>Core</module>
-        <module>LHDTypeInferrer</module>
+        <module>TypeInferrer</module>
         <module>Downloader</module>
+        <module>Pipeline</module>
     </modules>
     <dependencies>
         <dependency>
