--- a/Core/src/main/resources/simplelogger.properties
+++ b/Core/src/main/resources/simplelogger.properties
@@ -13,3 +13,4 @@ org.slf4j.simpleLogger.log.gate.creole.CreoleRegisterImpl=warn
 org.slf4j.simpleLogger.log.gate.util.GateClassLoader=error
 
 org.slf4j.simpleLogger.log.org.apache.jena.riot.system.stream.JenaIOEnvironment=info
+org.slf4j.simpleLogger.log.org.apache.jena.riot=error
