--- a/application.nl.conf
+++ b/application.nl.conf
@@ -2,7 +2,7 @@ LHD {
     output.dir = "../data/output"
     datasets.dir = "../data/datasets"
     lang = "nl"
-    dbpedia.version = "2014"
+    dbpedia.version = "2015-10"
     HypernymExtractor {
         index-dir = "../data/index"
         wiki-api = "http://nl.wikipedia.org/w/"
@@ -26,6 +26,10 @@ LHD {
     }
     TypeInferrer {
         index-dir = "../data/index"
+    }
+    Downloader {
+        base-url = "http://downloads.dbpedia.org/2015-10/core-i18n/"
+        ontology-dir = "../"
     }
 }
 
