Configs wiki api uri fixed

--- a/application.de.conf
+++ b/application.de.conf
@@ -5,7 +5,7 @@ LHD {
     dbpedia.version = "2015-10"
     HypernymExtractor {
         index-dir = "../data/index"
-        wiki-api = "http://de.wikipedia.org/w/"
+        wiki-api = "https://de.wikipedia.org/w/"
         gate {
             dir = "../utils/gate-8.0-build4825"
             plugin-lhd-dir = "../HypernymExtractor/target/gateplugin"
